# lcws

./: .gitignore  README.md  pyproject.toml
lcws/: github.py  main.py  problem.py  scraper.py  url_utils.py
lcws/config/: config.default.toml
lcws/data/: language_extensions.json  languages.json
